use java17 Accessible, add agent add-export handling